# HeadCV

./: CMakeLists.txt  FilteringCropBoxStep.cpp  FilteringCropBoxStep.h  PoseEstimationStep.cpp  PoseEstimationStep.h  SR300Grabber.cpp  SR300Grabber.h  constants.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mk_HeadCV.bat
